chore: align env example with local postgres

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,10 @@
-# Database
-DB_HOST=localhost
+# Database (Local Postgres)
+DB_HOST=127.0.0.1
 DB_PORT=5432
 DB_NAME=diabetes_db
-DB_USER=diabetes_user
-DB_PASSWORD=diabetes_password
+DB_USER=postgres
+DB_PASSWORD=change_me
+
 
 # App
 JWT_SECRET=change_me
